added some (currently failing) test cases for the CXF transport
git-svn-id: https://svn.apache.org/repos/asf/activemq/camel/trunk@522936 13f79535-47bb-0310-9956-ffa450edef68